# GhidraLaunch

./: .gitignore  GhidraLaunch.c  GhidraLaunch.sln  GhidraLaunch.vcxproj  GhidraLaunch.vcxproj.filters  Resource.rc  download.sh
GhidraLaunchC/: .gitignore  GhidraLaunchC.vcxproj  GhidraLaunchC.vcxproj.filters
GhidraLaunchC/Sources/: main.c
GhidraLaunchInstaller/: GhidraLaunchInstaller.wixproj  Product.wxs
GhidraLaunchRS/: Cargo.toml  GhidraLaunchRS.vcxproj  GhidraLaunchRS.vcxproj.filters  build.rs
GhidraLaunchRS/src/: main.rs
GhidraLaunchSetup/: Bundle.wxs  GhidraLaunchSetup.wixproj
Resources/: Logo.xcf  LogoSide.xcf  Resource.rc  Resource.res  TopBanner.xcf
